# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2023-01-05 Michael Truog   <mjtruog at protonmail dot com>

    * Fix cloudi_service_monitoring assertion after fatal_timeout change
      for external service support

2022-10-12 Michael Truog   <mjtruog at protonmail dot com>

    * CloudI version 2.0.5 released

2022-10-06 Michael Truog   <mjtruog at protonmail dot com>

    * Add outages text visual representation to the CloudI Service API
      nodes_status response for the tracked downtime of disconnected nodes
      (only a local view based on the local connection to a remote node)

2022-09-26 Michael Truog   <mjtruog at protonmail dot com>

    * Update jinterface

2022-09-19 Michael Truog   <mjtruog at protonmail dot com>

    * Fix cloudi_service_health_check inet:getaddrs/3 timeout

2022-09-15 Michael Truog   <mjtruog at protonmail dot com>

    * Improve cloudi_availability calculation
    * Update uuid
    * Update quickrand

2022-09-14 Michael Truog   <mjtruog at protonmail dot com>

    * Improve outages text visual representation accuracy
      for the CloudI Service API services_status response and
      cloudi_service_health_check hosts information

2022-09-12 Michael Truog   <mjtruog at protonmail dot com>

    * Add outages text visual representation to the CloudI Service API
      services_status response for service restarts
    * Add outages text visual representation to the
      cloudi_service_health_check hosts information

2022-09-09 Michael Truog   <mjtruog at protonmail dot com>

    * Add cloudi_service_health_check error_level argument and
      additional debug log output
    * Fix Haskell CloudI API 9.x warning

2022-09-08 Michael Truog   <mjtruog at protonmail dot com>

    * Add cloudi_service_health_check ping health functionality

2022-09-07 Michael Truog   <mjtruog at protonmail dot com>

    * Add cloudi_service_health_check log output for the
      timeout value when a TCP timeout occurs